--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body{
     width: 100px;
     height: auto;
 }
-
+ul li {
+    display: inline;
+    padding: 2px;
+}
+.center{
+    text-align: center;
+}
 
 
